# SPP

./: CMakeLists.txt  README.md
log/: Kinematic_plot.m  Static_256_36_01mm_16.mat  Static_LS.mat  Static_plot.m  hist.m  kinematic_256_9_15_81.mat  lsekf20231030.mat  raw.oem719
resource/: ico.rc
src/: consts.h  dataIO.cpp  dataIO.h  decode.cpp  decode.h  main.cpp  matrix.cpp  matrix.h  resource.h  sockets.cpp  sockets.h  solution.cpp  solution.h  strclib.h
